--- a/apps/docs/docs/concepts/hooks.mdx
+++ b/apps/docs/docs/concepts/hooks.mdx
@@ -80,7 +80,7 @@ export type KilpiOnAfterAuthorizationEvent<T extends AnyKilpiCore> = {
   /**
    * The resulting authorization object
    */
-  authorization: Authorization<InferPolicySubject<T["$$infer"]["policies"]>>;
+  decision: Authorization<InferPolicySubject<T["$$infer"]["policies"]>>;
 
   /**
    * The object being authorized
