--- a/apps/docs/docs/concepts/hooks.mdx
+++ b/apps/docs/docs/concepts/hooks.mdx
@@ -68,9 +68,9 @@ export type KilpiOnAfterAuthorizationEvent<T extends AnyKilpiCore> = {
   source: string;
 
   /**
-   * Policy key to authorize
+   * Action to authorize
    */
-  policy: string;
+  action: string;
 
   /**
    * Current subject
