--- a/apps/docs/docs/concepts/usage-on-client.mdx
+++ b/apps/docs/docs/concepts/usage-on-client.mdx
@@ -175,13 +175,13 @@ const subject = await KilpiClient.fetchSubject({
 ```ts
 // Fetch authorization decisions for policy without object
 const canCreateDocument = await KilpiClient.fetchIsAuthorized({
-  key: "documents:create",
+  action: "documents:create",
   queryOptions: { ... } // Optional
 });
 
 // Fetch authorization decisions for policy with object
 const canUpdateComment = await KilpiClient.fetchIsAuthorized({
-  key: "comments:update",
+  action: "comments:update",
   object: comment,
   queryOptions: { ... } // Optional
 });
